--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>web de pruebas index</h1>
+    <h2>ya esta el cambio</h2>
     <a href="index2.html">ir a pagina 2</a>
 </body>
 </html>
