--- a/index.html
+++ b/index.html
@@ -4,11 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>pruebas index</title>
 </head>
 <body>
+    <header>
     <h1>web de pruebas index</h1>
-    <h2>ya esta el cambio</h2>
-    <a href="index2.html">ir a pagina 2</a>
+    </header>
+
+        <nav>
+            
+            <a href="index.html">Home</a></li>
+            <a href="contacto.html">Contacto</a></li>
+            <a href="nosotros.html">Nosotros</a></li>
+            <a href="galeria.html">Galeria de Imagenes</a></li>
+        
+        </nav>
+
+    <div class="container">
+        <section>
+            <h3>section</h3>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia vero doloribus ducimus quisquam nobis alias repellendus ullam laboriosam officia explicabo exercitationem voluptate harum aliquid corporis non necessitatibus odit, doloremque minima?
+        </section>
+
+        <aside>
+            <h3>aside</h3>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo laborum enim veritatis explicabo architecto similique nesciunt impedit asperiores velit omnis harum est, expedita rerum adipisci exercitationem unde excepturi natus odio.
+        </aside>
+
+    </div>
+
+    <footer>
+        <h3>footer</h3>
+        <p>otras orientaciones o info de la pagina</p>
+    </footer>
+
 </body>
 </html>
